--- a/index.html
+++ b/index.html
@@ -23,189 +23,26 @@
               <a class="nav-link" href="#products">Products</a>
               <a class="nav-link" href="#contacts">Contacts</a>
               <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#cart">Cart</a>
+              <div class="nav-link clock"></div>
             </div>
           </div>
         </div>
       </nav>
-      <div id="products-carousel" class="carousel slide container" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#products-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#products-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#products-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#products-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/baby-yoda.svg" class="d-block w-50 mx-auto" alt="Baby Yoda">
-          </div>
-          <div class="carousel-item">
-            <img src="img/banana.svg" class="d-block w-50 mx-auto" alt="Banana">
-          </div>
-          <div class="carousel-item">
-            <img src="img/viking.svg" class="d-block w-50 mx-auto" alt="Viking">
-          </div>
-          <div class="carousel-item">
-            <img src="img/girl.svg" class="d-block w-50 mx-auto" alt="Girl">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#products-carousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#products-carousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      <div class="carousel container">
+        <div class="slide-container"></div>
+        <button class="btn slide-next">Next</button>
+        <button class="btn slide-prev">Prev</button>
       </div>
+      <div class="three-carousel container">
+        <div class="slide-container"></div>
+        <button class="btn slide-next">Next</button>
+        <button class="btn slide-prev">Prev</button>
+      </div>
+      
     </header>
     <main class="container">
       <h2 id="products">Products</h2>
-      <div class="products row">
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/baby-yoda.svg" class="card-img-top" alt="Baby Yoda">
-          <div class="card-body">
-            <h5 class="card-title">Baby Yoda</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/banana.svg" class="card-img-top" alt="Banana">
-          <div class="card-body">
-            <h5 class="card-title">Banana</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/girl.svg" class="card-img-top" alt="Girl">
-          <div class="card-body">
-            <h5 class="card-title">Girl</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/viking.svg" class="card-img-top" alt="Viking">
-          <div class="card-body">
-            <h5 class="card-title">Viking</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/baby-yoda.svg" class="card-img-top" alt="Baby Yoda">
-          <div class="card-body">
-            <h5 class="card-title">Baby Yoda</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/banana.svg" class="card-img-top" alt="Banana">
-          <div class="card-body">
-            <h5 class="card-title">Banana</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/girl.svg" class="card-img-top" alt="Girl">
-          <div class="card-body">
-            <h5 class="card-title">Girl</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/viking.svg" class="card-img-top" alt="Viking">
-          <div class="card-body">
-            <h5 class="card-title">Viking</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/baby-yoda.svg" class="card-img-top" alt="Baby Yoda">
-          <div class="card-body">
-            <h5 class="card-title">Baby Yoda</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/banana.svg" class="card-img-top" alt="Banana">
-          <div class="card-body">
-            <h5 class="card-title">Banana</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/girl.svg" class="card-img-top" alt="Girl">
-          <div class="card-body">
-            <h5 class="card-title">Girl</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/viking.svg" class="card-img-top" alt="Viking">
-          <div class="card-body">
-            <h5 class="card-title">Viking</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/baby-yoda.svg" class="card-img-top" alt="Baby Yoda">
-          <div class="card-body">
-            <h5 class="card-title">Baby Yoda</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/banana.svg" class="card-img-top" alt="Banana">
-          <div class="card-body">
-            <h5 class="card-title">Banana</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/girl.svg" class="card-img-top" alt="Girl">
-          <div class="card-body">
-            <h5 class="card-title">Girl</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-          <img src="img/viking.svg" class="card-img-top" alt="Viking">
-          <div class="card-body">
-            <h5 class="card-title">Viking</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-info">Info</a>
-            <a href="#" class="btn btn-primary">Buy</a>
-          </div>
-        </article>
-      </div>
+      <div class="products row"></div>
     </main>
     <footer class="container">
       <h2 id="contacts">Contacts!</h2>
@@ -244,5 +81,9 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
+    <script src="js/product-list.js"></script>
+    <script src="js/products-carousel.js"></script>
+    <script src="js/three-products-carousel.js"></script>
   </body>
 </html>
