--- a/index.html
+++ b/index.html
@@ -41,19 +41,24 @@
       
     </header>
     <main class="container">
-      <h2 id="products">Products</h2>
-      <div class="products row"></div>
+      <h2 id="products">Products</h2> 
+      <input type="text" class="currency" value="USD">
+      <button class="convert">Convert</button>
+      <div class="products row"> </div>
     </main>
     <footer class="container">
       <h2 id="contacts">Contacts!</h2>
-      <form action="" method="POST">
-        <label>Your name:
-          <input type="text" name="user-name" placeholder="User Name">
+      <form class="contact-form">
+        <label>
+            User name: <input name="name" type="text" placeholder="User name" required>
         </label>
-        <label>Your email:
-          <input type="email" name="user-email" placeholder="User Email">
+        <br>
+        <label>
+            Message: <textarea name="message" id="" cols="30" rows="10"></textarea>
         </label>
+        <br>
         <input type="submit">
+        <input type="reset">
       </form>
       <p>
         Some contacts
@@ -84,6 +89,7 @@
     <script src="js/index.js"></script>
     <script src="js/product-list.js"></script>
     <script src="js/products-carousel.js"></script>
+    <script src="js/contact-form.js"></script>
     <script src="js/three-products-carousel.js"></script>
   </body>
 </html>
